# advent-of-code

./: .containerignore  .gitignore  CHANGELOG.md  Containerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml
2024/: README.md  pyproject.toml
2024/scripts/: clean  format  install  lint  python_install  run_day  test  test_cov
2024/src/advent_of_code/: day_01.py  day_02.py  utils.py
2024/src/advent_of_code/solutions/: day_01.py  day_02.py  day_03.py
2024/static/: day_03
2024/tests/test_advent_of_code/: test_day_01.py
docs/: 2024.md  index.md
scripts/: clean  docs  docs_serve  install
scripts/container.d/: build  run
